bynkc/tests/fixtures/negative/282_transition_no_step_reference/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String
  store count: Cell[Int] = 0

  transition bad: count >= 0

  on call bump() -> Effect[()] {
    count := count + 1
    Effect.pure(())
  }
}